--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,7 +8,7 @@
   background-color: #A2D0FF;
   background-position: top;
   width: 100%;
-  height: 18vh;
+  height: 17vh;
 }
 .background .star-1 {
   position: absolute;
@@ -72,6 +72,12 @@
   font-size: 20px;
   font-family: Arial, serif;
   font-weight: bold;
+}
+
+.menu-horizontal {
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  min-width: 500px;
 }
 
 /*# sourceMappingURL=Header.css.map */
