--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,7 +7,7 @@
   background-color: #A2D0FF;
   background-position: top;
   width: 100%;
-  height: 18vh;
+  height: 17vh;
 
   .star-1 {
     position: absolute;
@@ -75,4 +75,14 @@
     font-family: Arial, serif;
     font-weight: bold;
   }
+}
+
+// Menu.scss
+
+.menu-horizontal {
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  //width: 100%;
+  min-width: 500px; // 设置最小宽度
+  //border: 1px black solid;
 }
